fixed third year cover on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ html {
 	padding: 0px;
 	transition-duration: 0.5s;
     transition-timing-function: ease;
+	overflow: hidden;
 }
 
 .logo:hover {
@@ -330,14 +331,15 @@ html {
 
 .iphones{
 	width: 100%;
-	height: 70vh;
+	height: auto;
 	background-color: #232ED1;
 	text-align: center;
 }
 
 .iphones img{
-	height: 100%;
-	width: auto;
+	width: 50%;
+	height: auto;
+	min-width: 380px;
 }
 
 .cover{
